cluster/apps/selfhosted/filestash/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filestash
  namespace: selfhosted
  labels:
    app.kubernetes.io/name: filestash
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: filestash
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filestash
    spec:
      containers:
      - name: filestash
        image: machines/filestash:latest@sha256:68ff47fda2c42e0a2389409bb8c25e5d4480581ad4e65cab3b0f14beeb95a05e
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8334
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          # Run the container as nobody:nogroup
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
            - NET_RAW
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1500m
            memory: 512Mi
