cluster/apps/selfhosted/filestash/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filestash
  namespace: selfhosted
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8334
  selector:
    app.kubernetes.io/name: filestash
